--- a/16-Bayesian-statistics.qmd
+++ b/16-Bayesian-statistics.qmd
@@ -60,7 +60,7 @@ How likely is it to rain in Adelaide - pre-existing beliefs based on knowledge a
 
 以下是翻譯初稿:
 
-你需要做的第一件事是忽略我告訴你的有關雨傘的信息,並記下你預先存在的關於雨水的信念。這很重要。如果您想誠實地說明您的信念在新的證據(數據)出現後是如何修正的,那麼您必須說明您在那些數據出現之前相信什麼! 那麼,您可能相信今天是否會下雨呢?您可能知道我住在澳大利亞,澳大利亞的大部分地區都很熱,也很乾燥。我所居住的阿德萊德市擁有地中海氣候,非常類似於南加利福尼亞州、南歐或北非。我是在1月寫這篇文章的,所以您可以假設這是夏季中期。事實上,您可能決定在維基百科[^bayesian-statistics-2]上快速查找,並發現阿德萊德在1月的31天裡平均有4.4天降雨。在不知道任何其他信息的情況下,您可能得出的結論是,阿德萊德1月降雨的概率約為15%,乾燥日的概率為85%(見 @tbl-tab16-1 )。如果這真的是您對阿德萊德降水量的信念(既然我告訴了您,我敢打賭這真的是您的信念),那麼我在這裡寫的就是您的**事前分布**,表示為$P(h)$。  
+你需要做的第一件事是忽略我告訴你的有關雨傘的信息,並記下你預先存在的關於雨水的信念。這很重要。如果您想誠實地說明您的信念在新的證據(數據)出現後是如何修正的,那麼您必須說明您在那些數據出現之前相信什麼! 那麼,您可能相信今天是否會下雨呢?您可能知道我住在澳大利亞,澳大利亞的大部分地區都很熱,也很乾燥。我所居住的阿德萊德市擁有地中海氣候,非常類似於南加利福尼亞州、南歐或北非。我是在1月寫這篇文章的,所以您可以假設這是夏季中期。事實上,您可能決定在維基百科[^bayesian-statistics-2]上快速查找,並發現阿德萊德在1月的31天裡平均有4.4天降雨。在不知道任何其他信息的情況下,您可能得出的結論是,阿德萊德1月降雨的機率約為15%,乾燥日的機率為85%(見 @tbl-tab16-1 )。如果這真的是您對阿德萊德降水量的信念(既然我告訴了您,我敢打賭這真的是您的信念),那麼我在這裡寫的就是您的**事前分布**,表示為$P(h)$。  
 
 
 [^bayesian-statistics-2]: <a href="http://en.wikipedia.org/wiki/Climate_of_Adelaide"
@@ -83,7 +83,7 @@ How likely am I to be carrying an umbrella on rainy and dry days? --->
 
 以下是翻譯初稿:
 
-為了解決這個推理問題,您需要一個關於我行為的理論。丹帶雨傘是在什麼時候?您可能猜測我並非完全白痴[^bayesian-statistics-3],我只會在雨天帶雨傘。另一方面,您也知道我有小孩,您並不會太驚訝地知道在這類事情上我相當健忘。假設在雨天我記得帶雨傘的概率約為30%(我在這方面真的很糟糕)。但在乾燥的日子裡,我帶雨傘的可能性只有大約5%。所以您可能會像@tbl-tab16-2中這樣寫出來。 
+為了解決這個推理問題,您需要一個關於我行為的理論。丹帶雨傘是在什麼時候?您可能猜測我並非完全白痴[^bayesian-statistics-3],我只會在雨天帶雨傘。另一方面,您也知道我有小孩,您並不會太驚訝地知道在這類事情上我相當健忘。假設在雨天我記得帶雨傘的機率約為30%(我在這方面真的很糟糕)。但在乾燥的日子裡,我帶雨傘的可能性只有大約5%。所以您可能會像@tbl-tab16-2中這樣寫出來。 
 
 [^bayesian-statistics-3]: 我知道,這需要一定的信任,但讓我們繼續吧,好嗎?
 
@@ -101,7 +101,7 @@ huxtabs[[16]][[2]]
 
 [^bayesian-statistics-4]: Um. I hate to bring this up, but some statisticians would object to me using the word "likelihood" here. The problem is that the word "likelihood" has a very specific meaning in frequentist statistics, and it's not quite the same as what it means in Bayesian statistics. As far as I can tell Bayesians didn't originally have any agreed upon name for the likelihood, and so it became common practice for people to use the frequentist terminology. This wouldn't have been a problem except for the fact that the way that Bayesians use the word turns out to be quite different to the way frequentists do. This isn't the place for yet another lengthy history lesson but, to put it crudely, when a Bayesian says "a likelihood function" they're usually referring one of the rows of the table. When a frequentist says the same thing, they're referring to the same table, but to them "a likelihood function" almost always refers to one of the columns. This distinction matters in some contexts, but it's not important for our purposes. --->
 
-重要的是要記住,此表中的每個單元都描述了在特定假設 $h$ 為真的情況下將觀察到的數據 $d$ 的信念。這種“條件概率”寫為 $P(d|h)$,您可以讀作“在條件 $h$ 下 $d$ 的概率”。在貝氏統計中,這被稱為在假設 $h$ 條件下數據 $d$ 的**似然性**。[^bayesian-statistics-4]  
+重要的是要記住,此表中的每個單元都描述了在特定假設 $h$ 為真的情況下將觀察到的數據 $d$ 的信念。這種“條件機率”寫為 $P(d|h)$,您可以讀作“在條件 $h$ 下 $d$ 的機率”。在貝氏統計中,這被稱為在假設 $h$ 條件下數據 $d$ 的**似然性**。[^bayesian-statistics-4]  
 
 [^bayesian-statistics-4]: 噢。我很不願意提起這一點,但一些統計學家會反對我在這裡使用“似然性”一詞。問題在於,“似然性”在次數主義統計中有非常具體的含義,而且與它在貝氏統計中的含義不完全相同。據我所知,貝葉斯最初沒有任何公認的名稱來表示似然性,所以人們使用次數主義術語成為常規做法。這本不會成為問題,除非事實證明貝葉斯使用這個詞的方式與次數主義者的方式相當不同。這裡不是再來一堂冗長的歷史課的地方,但粗略地說,當貝葉斯說“一個似然函數”時,他們通常是指表中的一行。當次數主義者說同樣的事情時,他們指的是同一個表,但對他們來說,“一個似然函數”幾乎總是指的是其中一列。這種區別在某些語境中很重要,但對我們的目的來說並不重要。
 
@@ -132,15 +132,15 @@ Four possibilities combining rain (or not) and umbrella carrying (or not). --->
 
 至此,所有的要素都已到位。寫下了先驗分布和似然性后,您擁有了進行貝氏推理所需的所有信息。那麼現在的問題是,我們如何使用這些信息?事實證明,我們在這裡可以使用一個非常簡單的方程式,但重要的是您要理解我們為什麼要使用它,所以我將嘗試從更基本的思想建立它。  
 
-讓我們從概率理論的一個規則開始。我在很早以前的 @tbl-tab7-1 中列出了它,但當時我並沒有把它當回事,您可能也忽略了它。問題涉及到的規則是關於兩件事同時發生的概率。在我們的示例中,您可能想計算今天降雨(即假設 $h$ 為真)和我帶雨傘(即觀測到數據 $d$)的概率。假設和數據的**聯合概率**寫為 $P(d,h)$,可以通過將先驗概率 $P(h)$ 與似然性 $P(d|h)$ 相乘來計算。在數學上,我們說  
+讓我們從機率理論的一個規則開始。我在很早以前的 @tbl-tab7-1 中列出了它,但當時我並沒有把它當回事,您可能也忽略了它。問題涉及到的規則是關於兩件事同時發生的機率。在我們的示例中,您可能想計算今天降雨(即假設 $h$ 為真)和我帶雨傘(即觀測到數據 $d$)的機率。假設和數據的**聯合機率**寫為 $P(d,h)$,可以通過將先驗機率 $P(h)$ 與似然性 $P(d|h)$ 相乘來計算。在數學上,我們說  
 
 $$P(d,h)=P(d|h)P(h)$$  
 
-那麼,今天是雨天*和*我記得帶雨傘的概率是多少? 如我們前面討論的,先驗概率告訴我們雨天的概率為15%,似然性告訴我們我在雨天記得帶雨傘的概率為$30\\%$。 所以這兩件事同時發生的概率是將兩個相乘計算得到的  
+那麼,今天是雨天*和*我記得帶雨傘的機率是多少? 如我們前面討論的,先驗機率告訴我們雨天的機率為15%,似然性告訴我們我在雨天記得帶雨傘的機率為$30\\%$。 所以這兩件事同時發生的機率是將兩個相乘計算得到的  
 
 \$$ \\begin{split} P(rainy, umbrella) & = P(umbrella|rainy) \\times P(rainy) \\\\\\ & = 0.30 \\times 0.15 \\\\\\ & = 0.045 \\end{split} \$$  
 
-換句話說,在被告知實際發生的任何事情之前,您認為今天是雨天且我會記得帶雨傘的概率為4.5%。當然,可能發生的事情有四種,對嗎? 那麼讓我們對所有四種情況重複這個運算。如果我們這樣做,我們會得到 @tbl-tab16-3。  
+換句話說,在被告知實際發生的任何事情之前,您認為今天是雨天且我會記得帶雨傘的機率為4.5%。當然,可能發生的事情有四種,對嗎? 那麼讓我們對所有四種情況重複這個運算。如果我們這樣做,我們會得到 @tbl-tab16-3。  
 
 
 
@@ -172,13 +172,13 @@ Now, because this table is so useful, I want to make sure you understand what al
 Four possibilities combining rain (or not) and umbrella carrying (or not), expressed as conditional probabilities. --->
 
 
-這是一個非常有用的表格,所以值得花點時間思考這些數字都在告訴我們什麼。首先,請注意,行總和並沒有告訴我們任何新信息。例如,第一行告訴我們,如果我們忽略所有與雨傘有關的事,今天將是雨天的機率為15%。當然,這一點都不奇怪,因為這就是我們的先驗分布。[^bayesian-statistics-5] 重要的不是數字本身。相反,重要的是它給了我們一些信心,即我們的計算是合理的! 現在看看列總和,並請注意,它們告訴了我們一些我們還沒有明確說明過的事情。與行總和告訴我們降雨的概率一樣,列總和告訴我們我帶傘的概率。具體來說,第一列告訴我們,平均而言(即,不管是雨天還是晴天),我帶雨傘的概率為8.75%。 最後,請注意,當我們在所有四種邏輯上可能的事件中求和時,所有內容的總和為1。換句話說,我們寫下的是在所有可能的數據和假設組合上定義的適當的概率分布。  
+這是一個非常有用的表格,所以值得花點時間思考這些數字都在告訴我們什麼。首先,請注意,行總和並沒有告訴我們任何新信息。例如,第一行告訴我們,如果我們忽略所有與雨傘有關的事,今天將是雨天的機率為15%。當然,這一點都不奇怪,因為這就是我們的先驗分布。[^bayesian-statistics-5] 重要的不是數字本身。相反,重要的是它給了我們一些信心,即我們的計算是合理的! 現在看看列總和,並請注意,它們告訴了我們一些我們還沒有明確說明過的事情。與行總和告訴我們降雨的機率一樣,列總和告訴我們我帶傘的機率。具體來說,第一列告訴我們,平均而言(即,不管是雨天還是晴天),我帶雨傘的機率為8.75%。 最後,請注意,當我們在所有四種邏輯上可能的事件中求和時,所有內容的總和為1。換句話說,我們寫下的是在所有可能的數據和假設組合上定義的適當的機率分布。  
 
 [^bayesian-statistics-5]:為明確起見,“先驗”信息是預先存在的知識或信念,在我們收集或使用任何數據來改善該信息之前。  
 
 現在,由於這個表非常有用,我想確保您了解所有元素對應的是什麼以及它們是如何寫的(@tbl-tab16-5):  
 
-合併了降雨(或不降雨)和帶雨傘(或不帶)的四種可能性,表示為條件概率。  
+合併了降雨(或不降雨)和帶雨傘(或不帶)的四種可能性,表示為條件機率。  
 
 
 
@@ -199,7 +199,7 @@ Four possibilities combining rain (or not) and umbrella carrying (or not), expre
 
 ```{r}
 #| label: tbl-tab16-6
-#| tbl-cap: 以條件概率的形式表示的合併了降雨(或不降雨)和帶雨傘(或不帶)的四種可能性的假設條件。
+#| tbl-cap: 以條件機率的形式表示的合併了降雨(或不降雨)和帶雨傘(或不帶)的四種可能性的假設條件。
 huxtabs[[16]][[6]] 
 ```
 
@@ -211,9 +211,8 @@ huxtabs[[16]][[6]]
 
 Revising beliefs given new data about umbrella carrying.--->
 
-以下是第一段翻譯初稿:  
 
-在上一節中我們列出的表格是解決下雨天問題的一個非常有力的工具,因為它考慮了所有四種邏輯可能性,並準確地說明了在獲得任何數據之前,您對每一種可能性的信心程度。現在是考慮我們在實際獲得數據時我們的信念會發生什麼時候了。 在下雨天的問題中,您被告知我確實在帶雨傘。這有些令人驚訝。根據我們的表格,我帶雨傘的概率只有8.75%。但這很有意義,對嗎?一個女人在炎熱乾燥的城市的夏天帶著雨傘是相當不尋常的,所以您並不真的期望這樣。儘管如此,數據告訴您,這是真的。無論您認為它有多不可能,您現在必须調整您的信念以容納您現在*知道*我有雨傘這一事實。[^bayesian-statistics-6] 為了反映這些新知識,我們的*修訂*表必須有以下數字。 (見 @tbl-tab16-7 )。  
+在上一節中我們列出的表格是解決下雨天問題的一個非常有力的工具,因為它考慮了所有四種邏輯可能性,並準確地說明了在獲得任何數據之前,您對每一種可能性的信心程度。現在是考慮我們在實際獲得數據時我們的信念會發生什麼時候了。 在下雨天的問題中,您被告知我確實在帶雨傘。這有些令人驚訝。根據我們的表格,我帶雨傘的機率只有8.75%。但這很有意義,對嗎?一個女人在炎熱乾燥的城市的夏天帶著雨傘是相當不尋常的,所以您並不真的期望這樣。儘管如此,數據告訴您,這是真的。無論您認為它有多不可能,您現在必须調整您的信念以容納您現在*知道*我有雨傘這一事實。[^bayesian-statistics-6] 為了反映這些新知識,我們的*修訂*表必須有以下數字。 (見 @tbl-tab16-7 )。  
 
 [^bayesian-statistics-6]: 如果我們更複雜一些,我們可以擴展示例以容納我撒謊關於雨傘的可能性。但讓我們保持簡單,可以嗎?
 
@@ -232,13 +231,13 @@ Revising probabilities given new data about umbrella carrying. --->
 
 換句話說,事實已經排除了“沒有雨傘”的任何可能性,所以我們必須將表中表示我沒有帶雨傘的任何單元數據設置為零。此外,您確實知道我正在帶雨傘,所以左側的列總和必須為1,以正確描述 $P(umbrella) = 1$ 這一事實。  
 
-我們應該在空白單元中填入什麼兩個數字呢?同樣,我們不擔心數學,而是考慮我們的直覺。當我們第一次編寫表格時,結果是這兩個單元中幾乎有相同的數字,對嗎? 我們計算出“雨和傘”的聯合概率為4.5%,“旱和傘”的聯合概率為4.25%。 換句話說,在我告訴您我實際上在帶雨傘之前,您會說這兩個事件的概率幾乎相同,是嗎? 但請注意,這兩種可能性與我確實在帶雨傘這一事實是一致的。 從這兩種可能性來看,幾乎沒什麼改變。我希望您同意,“雨和雨傘”比“旱和雨傘”更合理一點仍然是正確的。所以我們預期在最終表格中看到的數字是保持“雨和雨傘”比“旱和雨傘”較合理這一事實的數字,同時仍確保表格中的數字加起來。也許像 @tbl-tab16-8 ?  
+我們應該在空白單元中填入什麼兩個數字呢?同樣,我們不擔心數學,而是考慮我們的直覺。當我們第一次編寫表格時,結果是這兩個單元中幾乎有相同的數字,對嗎? 我們計算出“雨和傘”的聯合機率為4.5%,“旱和傘”的聯合機率為4.25%。 換句話說,在我告訴您我實際上在帶雨傘之前,您會說這兩個事件的機率幾乎相同,是嗎? 但請注意,這兩種可能性與我確實在帶雨傘這一事實是一致的。 從這兩種可能性來看,幾乎沒什麼改變。我希望您同意,“雨和雨傘”比“旱和雨傘”更合理一點仍然是正確的。所以我們預期在最終表格中看到的數字是保持“雨和雨傘”比“旱和雨傘”較合理這一事實的數字,同時仍確保表格中的數字加起來。也許像 @tbl-tab16-8 ?  
 
 
 
 ```{r}
 #| label: tbl-tab16-8
-#| tbl-cap: 根據有關帶雨傘的新數據修訂概率。 
+#| tbl-cap: 根據有關帶雨傘的新數據修訂機率。 
 huxtabs[[16]][[8]] 
 ```
 
@@ -258,15 +257,15 @@ And this formula, folks, is known as **Bayes' rule**. It describes how a learner
 
 以下是第二段翻譯初稿:
 
-這個表格告訴您的信息是,在被告知我正在帶雨傘后,您相信今天降雨的可能性為51.4%,不降雨的可能性為48.6%。這就是我們問題的答案! 在我帶雨傘的情況下降雨的**後驗概率** $P(h\\|d)$ 為51.4%。
+這個表格告訴您的信息是,在被告知我正在帶雨傘后,您相信今天降雨的可能性為51.4%,不降雨的可能性為48.6%。這就是我們問題的答案! 在我帶雨傘的情況下降雨的**後驗機率** $P(h\\|d)$ 為51.4%。
 
-我是如何計算這些數字的呢?您可能已經猜到了。為了算出“雨”的概率為$0.514$,我所做的就是取“雨和雨傘”的概率 $0.045$,並將其除以“雨傘”的機率 $0.0875$。這會產生一個滿足我們的要求的表,即所有內容的總和為1,並且不會干擾與實際數據一致的兩個事件之間的相對合理性。 用花俏的統計術語來說,我在這裡所做的就是將假設和數據的聯合概率 $P(d,h)$ 除以數據的**邊際概率** $P(d)$,這就是給我們觀察到的數據條件下假設的後驗概率。 用方程式寫出來是:[^bayesian-statistics-7]  
+我是如何計算這些數字的呢?您可能已經猜到了。為了算出“雨”的機率為$0.514$,我所做的就是取“雨和雨傘”的機率 $0.045$,並將其除以“雨傘”的機率 $0.0875$。這會產生一個滿足我們的要求的表,即所有內容的總和為1,並且不會干擾與實際數據一致的兩個事件之間的相對合理性。 用花俏的統計術語來說,我在這裡所做的就是將假設和數據的聯合機率 $P(d,h)$ 除以數據的**邊際機率** $P(d)$,這就是給我們觀察到的數據條件下假設的後驗機率。 用方程式寫出來是:[^bayesian-statistics-7]  
 
-[^bayesian-statistics-7]: 您可能會注意到,這個方程式實際上是我在上一節開頭列出的同一個基本規則的重述。 如果您將等式兩邊都乘以 $P(d)$,那麼您得到 $P(d)P(h|d)=P(d,h)$,這是聯合概率的計算規則。 所以我在這裡實際上並沒有引入任何“新的”規則,我只是以不同的方式使用了相同的規則。  
+[^bayesian-statistics-7]: 您可能會注意到,這個方程式實際上是我在上一節開頭列出的同一個基本規則的重述。 如果您將等式兩邊都乘以 $P(d)$,那麼您得到 $P(d)P(h|d)=P(d,h)$,這是聯合機率的計算規則。 所以我在這裡實際上並沒有引入任何“新的”規則,我只是以不同的方式使用了相同的規則。  
 
 $$P(h|d)=\\frac{P(h|d)}{P(d)}$$  
 
-然而,記住我在上一節開頭所說的,即聯合概率 $P(d,h)$ 是通過將先驗概率 Pphq 乘以似然性 $P(d|h)$ 計算出來的。 在現實生活中,我們實際上知道如何計算的是先驗概率和似然性,所以讓我們將它們代回方程式。 這給了我們後驗概率的以下公式:  
+然而,記住我在上一節開頭所說的,即聯合機率 $P(d,h)$ 是通過將先驗機率 Pphq 乘以似然性 $P(d|h)$ 計算出來的。 在現實生活中,我們實際上知道如何計算的是先驗機率和似然性,所以讓我們將它們代回方程式。 這給了我們後驗機率的以下公式:  
 
 $$P(h|d)=\\frac{P(d|h)P(h)}{P(d)}$$  
 
@@ -288,13 +287,13 @@ It's all so simple that I feel like an idiot even bothering to write these equat
 
 [^bayesian-statistics-8]: Obviously, this is a highly simplified story. All the complexity of real life Bayesian hypothesis testing comes down to how you calculate the likelihood $P(d\|h)$ when the hypothesis h is a complex and vague thing. I'm not going to talk about those complexities in this book, but I do want to highlight that although this simple story is true as far as it goes, real life is messier than I'm able to cover in an introductory stats textbook. --->
 
-在 @sec-Hypothesis-testing 中,我描述了正統的假設檢定方法。 這需要整整一章來描述,因為虛無假設檢定是一個非常精密的設備,人們覺得很難理解。 相反,貝氏假設檢定的方法簡直簡單得令人難以置信。 讓我們選擇一種與正統場景緊密類似的設置。 有兩個要比較的假設,虛無假設 $h_0$ 和替代假設 $h_1$。 在運行實驗之前,我們對哪些假設是真實的有一些信念 $P(h)$。我們運行一項實驗並獲得數據 d。 與次數主義統計不同,貝氏統計允許我們討論虛無假設為真的概率。 更妙的是,它允許我們使用貝葉斯規則計算**虛無假設的後驗概率**:
+在 @sec-Hypothesis-testing 中,我描述了正統的假設檢定方法。 這需要整整一章來描述,因為虛無假設檢定是一個非常精密的設備,人們覺得很難理解。 相反,貝氏假設檢定的方法簡直簡單得令人難以置信。 讓我們選擇一種與正統場景緊密類似的設置。 有兩個要比較的假設,虛無假設 $h_0$ 和替代假設 $h_1$。 在運行實驗之前,我們對哪些假設是真實的有一些信念 $P(h)$。我們運行一項實驗並獲得數據 d。 與次數主義統計不同,貝氏統計允許我們討論虛無假設為真的機率。 更妙的是,它允許我們使用貝葉斯規則計算**虛無假設的後驗機率**:
 
-$$P(h_0|d)=\\frac{P(d|h_0)P(h_0)}{P(d)}$$
+$$P(h_0|d)=\frac{P(d|h_0)P(h_0)}{P(d)}$$
 
 該公式準確地告訴我們在觀察到數據 d 後,我們對虛無假設應該有多大的信念。 類似地,我們可以使用基本相同的方程式確定對替代假設的信任程度。 我們所要做的只是更改下標:  
 
-$$P(h_1|d)=\\frac{P(d|h_1)P(h_1)}{P(d)}$$
+$$P(h_1|d)=\frac{P(d|h_1)P(h_1)}{P(d)}$$
 
 這非常簡單,以至於我覺得我連把這些方程寫下來都很傻,因為我所做的只是從前一節複製了貝氏規則。[^bayesian-statistics-8]  
 
@@ -316,15 +315,15 @@ Actually, this equation is worth expanding on. There are three different terms h
 
 Posterior odds given the Bsyes factor and prior odds. --->
 
-在實踐中,大多數貝氏數據分析師傾向於不以原始後驗概率 $P(h_0|d)$ 和 $P(h_1|d)$ 的形式談論。相反,我們傾向於以**後驗似然比**的形式談論。可以想像成下注。例如,假設虛無假設的後驗概率為25%,替代假設的後驗概率為75%。替代假設的概率是虛無假設的三倍,所以我們說似然比為3:1,有利于替代假設。數學上,我們計算後驗似然比所要做的就是將一個後驗概率除以另一個
+在實踐中,大多數貝氏數據分析師傾向於不以原始後驗機率 $P(h_0|d)$ 和 $P(h_1|d)$ 的形式談論。相反,我們傾向於以**後驗賠率比**(Posterior odds)的形式談論。可以想像成下注。例如,假設虛無假設的後驗機率為25%,替代假設的後驗機率為75%。替代假設的機率是虛無假設的三倍,所以我們說賠率比為3:1,有利于替代假設。數學上,我們計算後驗賠率比所要做的就是將一個假設的後驗機率除以另一個假設的後驗機率
 
-$$\\frac{P(h_1|d)}{P(h_0|d)}=\\frac{0.75}{0.25}=3$$  
+$$\frac{P(h_1|d)}{P(h_0|d)}=\frac{0.75}{0.25}=3$$  
 
-或者,用上面的方程式書寫相同的內容  
+或者,用這一節開始提到的公式改寫成  
 
-$$\\frac{P(h_1|d)}{P(h_0|d)}=\\frac{d|h_1}{d|h_0} \\times \\frac{h_1}{h_0}$$
+$$\frac{P(h_1|d)}{P(h_0|d)}=\frac{d|h_1}{d|h_0} \times \frac{h_1}{h_0}$$
 
-實際上,這個等式值得擴展。 這裡有三個不同的術語您應該知道。 在左側,我們有後驗似然比,它告訴您在看到數據后對虛無假設和替代假設的相對合理性的信念。 在右側,我們有**先驗似然比**,它指示您在看到數據之前的想法。在中間,我們有**貝氏因子**,它描述了數據提供的證據量。 (@tbl-tab16-9)。  
+實際上,這個等式值得擴展。 這裡有三個不同的術語您應該知道。 在左側,我們有後驗賠率比,它告訴您在看到數據后對虛無假設和替代假設的相對合理性的信念。 在右側,我們有**先驗賠率比**(Prior odds),它指示您在看到數據之前的想法。在中間,我們有**貝氏因子**(Bayes factor),它描述了數據提供的證據量。 (@tbl-tab16-9)。  
 
 
 
@@ -332,13 +331,13 @@ $$\\frac{P(h_1|d)}{P(h_0|d)}=\\frac{d|h_1}{d|h_0} \\times \\frac{h_1}{h_0}$$
 
 ```{r}
 #| label: tbl-tab16-9
-#| tbl-cap: 基於貝氏因子和先驗似然比的後驗似然比
+#| tbl-cap: 基於貝氏法則(Bayesian Rule)，可運用貝氏因子(Bayes factor)和先驗賠率比(Prior Odds)，估算後驗賠率比(Posterior odds)
 huxtabs[[16]][[9]] 
 ```
 
 <!--- The Bayes factor (sometimes abbreviated as BF) has a special place in Bayesian hypothesis testing, because it serves a similar role to the p-value in orthodox hypothesis testing. The Bayes factor quantifies the strength of evidence provided by the data, and as such it is the Bayes factor that people tend to report when running a Bayesian hypothesis test. The reason for reporting Bayes factors rather than posterior odds is that different researchers will have different priors. Some people might have a strong bias to believe the null hypothesis is true, others might have a strong bias to believe it is false. Because of this, the polite thing for an applied researcher to do is report the Bayes factor. That way, anyone reading the paper can multiply the Bayes factor by their own personal prior odds, and they can work out for themselves what the posterior odds would be. In any case, by convention we like to pretend that we give equal consideration to both the null hypothesis and the alternative, in which case the prior odds equals 1, and the posterior odds becomes the same as the Bayes factor. --->
 
-貝氏因子(有時縮寫為 BF)在貝氏假設檢定中佔有特殊地位,因為它在正統假設檢定中的 p 值起著類似作用。 貝氏因子量化了數據提供的證據力度,因此報告貝氏因子是人們在運行貝氏假設檢定時傾向於報告的內容。 報告貝氏因子而不是後驗似然比的原因是不同的研究人員會有不同的先驗分布。有些人可能傾向於相信虛無假設為真,而其他人可能傾向於相信它為假。因此,禮貌的應用研究者應做的是報告貝氏因子。這樣,閱讀論文的任何人都可以將貝氏因子與自己的個人先驗似然比相乘,並且他們可以自己算出後驗似然比。無論如何,按照慣例,我們喜歡假裝我們給予虛無假設和替代假設同等考慮,在這種情況下,先驗似然比等於1,後驗似然比就等於貝氏因子。
+貝氏因子(有時縮寫為 BF)在貝氏假設檢定中佔有特殊地位,因為它在正統假設檢定中的 p 值起著類似作用。 貝氏因子量化了數據提供的證據力度,因此報告貝氏因子是人們在運行貝氏假設檢定時傾向於報告的內容。 報告貝氏因子而不是後驗賠率比的原因是不同的研究人員會有不同的先驗分布。有些人可能傾向於相信虛無假設為真,而其他人可能傾向於相信它為假。因此,禮貌的應用研究者應做的是報告貝氏因子。這樣,閱讀論文的任何人都可以將貝氏因子與自己的個人先驗賠率比相乘,並且他們可以自己算出後驗賠率比。無論如何,按照慣例,我們喜歡假裝我們給予虛無假設和替代假設同等考慮,在這種情況下,先驗賠率比等於1,後驗賠率比就等於貝氏因子。
 
 
 ### 解讀貝氏因子
@@ -391,7 +390,7 @@ $$BF' = \\frac{P(d|h_0)}{P(d|h_1)}=\\frac{0.2}{0.1}=2$$
 
 以下是翻譯初稿:
 
-到目前為止,我一直專注於支撐貝氏統計的邏輯基礎。我們討論了“概率作為信念程度”的觀念以及它隱含的關於理性代理人應如何推理世界的內容。您必須自行回答的問題是:您希望如何進行統計學? 您想作為正統統計學家依靠抽樣分布和 p 值來指導您的決策? 還是您想作為一個貝氏主義者,依靠先驗信念、貝氏因子和有理性信念修正規則等? 老實說,我不能為您回答這個問題。 最終,這取決於您認為什麼是正確的。 這是您的決定,僅您一人的決定。 雖然如此,我可以談談我為什麼更喜歡貝氏方法。
+到目前為止,我一直專注於支撐貝氏統計的邏輯基礎。我們討論了“機率作為信念程度”的觀念以及它隱含的關於理性代理人應如何推理世界的內容。您必須自行回答的問題是:您希望如何進行統計學? 您想作為正統統計學家依靠抽樣分布和 p 值來指導您的決策? 還是您想作為一個貝氏主義者,依靠先驗信念、貝氏因子和有理性信念修正規則等? 老實說,我不能為您回答這個問題。 最終,這取決於您認為什麼是正確的。 這是您的決定,僅您一人的決定。 雖然如此,我可以談談我為什麼更喜歡貝氏方法。
 
 
 ### 統計學呈現你所相信的世界面貌
@@ -425,18 +424,18 @@ Speaking for myself, I found this to be the most liberating thing about switchin
 [^bayesian-statistics-9]: <a href="http://www.imdb.com/title/tt0093779/quotes"
     target="_blank">http://www.imdb.com/title/tt0093779/quotes</a> 。我應該指出,我不是第一個使用這句話來抱怨次數學派方法的人。Rich Morey和他的同事們首先有了這個想法。我厚顏無恥地偷了它,因為在這種情況下使用它是個非常棒的引文,而且我絕不會錯過任何引用《公主新娘》的機會。  
 
-對我來說,貝氏方法的最大優勢之一是它能夠回答正確的問題。 在貝氏框架內,提到“假設為真的概率”是完全合理和允許的。 您甚至可以嘗試計算這個概率。 最終,這難道不是您希望統計檢驗告訴您的嗎? 對於真正的人類而言,這似乎是做統計的全部重點,即確定什麼是真的什麼不是真的。 每當您不完全確定真相時,都應使用概率論的語言來說些“理論 A 為真的概率為 80%,但理論 B 為真的概率為 20%”之類的話。
+對我來說,貝氏方法的最大優勢之一是它能夠回答正確的問題。 在貝氏框架內,提到“假設為真的機率”是完全合理和允許的。 您甚至可以嘗試計算這個機率。 最終,這難道不是您希望統計檢驗告訴您的嗎? 對於真正的人類而言,這似乎是做統計的全部重點,即確定什麼是真的什麼不是真的。 每當您不完全確定真相時,都應使用機率論的語言來說些“理論 A 為真的機率為 80%,但理論 B 為真的機率為 20%”之類的話。
 
-對人類而言,這似乎非常明顯,但在正統框架中這明確被禁止了。 對次數主義者來說,這種陳述是無意義的,因為“理論是真實的”不是一個可重複的事件。一個理論要麼是真的,要麼是假的,不管您多麼希望做出這樣的概率陳述,都是不允許的。 這就是為什麼在 @sec-The-p-value-of-a-test 中我一再警告您不要將 p 值解釋為虛無假設為真的概率。這就是為什麼幾乎每本統計學教科書都不得不重複這一警告。 那是因為人們迫切希望這是正確的解釋。 儘管有次數主義教條,但終生教授本科生和每天進行數據分析的經驗告訴我,大多數實際的人類認為“假設為真的概率”不僅有意義,而且是我們最關心的事情。 這是一個非常吸引人的想法,甚至受過訓練的統計學家也會誤解試圖以這種方式解釋 p 值。例如,以下是 2013 年 Newspoll 官方報告中的一段話,解釋如何解釋他們的(次數主義)數據分析:[^bayesian-statistics-10]
+對人類而言,這似乎非常明顯,但在正統框架中這明確被禁止了。 對次數主義者來說,這種陳述是無意義的,因為“理論是真實的”不是一個可重複的事件。一個理論要麼是真的,要麼是假的,不管您多麼希望做出這樣的機率陳述,都是不允許的。 這就是為什麼在 @sec-The-p-value-of-a-test 中我一再警告您不要將 p 值解釋為虛無假設為真的機率。這就是為什麼幾乎每本統計學教科書都不得不重複這一警告。 那是因為人們迫切希望這是正確的解釋。 儘管有次數主義教條,但終生教授本科生和每天進行數據分析的經驗告訴我,大多數實際的人類認為“假設為真的機率”不僅有意義,而且是我們最關心的事情。 這是一個非常吸引人的想法,甚至受過訓練的統計學家也會誤解試圖以這種方式解釋 p 值。例如,以下是 2013 年 Newspoll 官方報告中的一段話,解釋如何解釋他們的(次數主義)數據分析:[^bayesian-statistics-10]
 
 [^bayesian-statistics-10]: <a href="http://about.abc.net.au/reports-publications/appreciation-survey-summary-report-2013/%0A" target="_blank">http://about.abc.net.au/reports-publications/appreciation-survey-summary-report-2013/</a> 
 
 
-> _在整個報告中,在相關的地方,已注意到統計上顯著的變化。所有顯著性測試都是基於 95% 的置信水平進行的。_**這意味著如果注意到一項變化在統計上顯著,那麼實際變化發生的概率為 95%,並且僅僅是由於機會變異引起的**。*(強調添加)*
+> _在整個報告中,在相關的地方,已注意到統計上顯著的變化。所有顯著性測試都是基於 95% 的置信水平進行的。_**這意味著如果注意到一項變化在統計上顯著,那麼實際變化發生的機率為 95%,並且僅僅是由於機會變異引起的**。*(強調添加)*
 
-不!這不是 p < .05 的意思。對次數主義統計學家來說,95% 的置信水平也不是這個意思。加粗部分就是完全錯誤的。正統方法不能告訴您“實際變化發生的概率為 95%”,因為這不是次數主義概率可以分配給的事件類型。對於意識形態次數主義者來說,這句話應該是沒有意義的。即使您是更務實的次數主義者,它仍然是 p 值的錯誤定義。如果您想依賴正統統計工具,那麼這句話就根本不被允許或正確。  
+不!這不是 p < .05 的意思。對次數主義統計學家來說,95% 的置信水平也不是這個意思。加粗部分就是完全錯誤的。正統方法不能告訴您“實際變化發生的機率為 95%”,因為這不是次數主義機率可以分配給的事件類型。對於意識形態次數主義者來說,這句話應該是沒有意義的。即使您是更務實的次數主義者,它仍然是 p 值的錯誤定義。如果您想依賴正統統計工具,那麼這句話就根本不被允許或正確。  
 
-另一方面,假設您是貝氏主義者。儘管加粗通過是 p 值的錯誤定義,但當貝氏主義者說替代假設的後驗概率大於 95% 時,這幾乎正是他們的意思。 而這裡有一個問題。如果您實際上想報告的是貝氏後驗,那麼您為什麼還要嘗試使用正統方法呢? 如果您想做出貝氏主義者的認定,您所要做的就是成為貝氏主義者並使用貝氏工具。  
+另一方面,假設您是貝氏主義者。儘管加粗通過是 p 值的錯誤定義,但當貝氏主義者說替代假設的後驗機率大於 95% 時,這幾乎正是他們的意思。 而這裡有一個問題。如果您實際上想報告的是貝氏後驗,那麼您為什麼還要嘗試使用正統方法呢? 如果您想做出貝氏主義者的認定,您所要做的就是成為貝氏主義者並使用貝氏工具。  
 
 就我個人而言,我發現切換到貝氏觀點最自由的就是這一點。 一旦您轉換了思維方式,您就不再需要圍繞 p 值的反直覺定義困惑您的大腦。 您不必費心記住為什麼您不能說您 95% 確定真值落在某個區間內。 您所要做的只是誠實地說出您在運行該研究之前的信念,然後報告您從中學到了什麼。 聽起來不錯,不是嗎? 對我來說,這就是貝氏方法的大前提。 您可以真正地做出您想要的分析,並表達您真正相信數據正在告訴您的內容。
 
@@ -458,7 +457,7 @@ Well, how true is that? One way to approach this question is to try to convert p
 
 考慮上述羅納德·費雪爵士的引文,他是當今正統統計方法的奠基人之一。 如果有人有資格表達對 p 值預期功能的意見,那就是費雪了。 在摘自他的經典指南《研究工作者的統計方法》的這段話中,他非常清楚地說明了什麼是在 p < .05 時拒絕虛無假設。 在他看來,如果我們認為 p < .05 意味著“真實效應”,那麼“我們通常不會犯太大的錯誤”。 這種觀點並不罕見。 根據我的經驗,大多數從業人員的觀點與費雪的觀點非常相似。 從本質上講,假定 p < .05 建議代表了相當嚴格的證據標准。  
 
-這是真的嗎?解決這個問題的一種方法是嘗試將 p 值轉換為貝氏因子,並查看兩者的比較情況。 這並不容易,因為 p 值與貝氏因子是一種基本不同的計算,它們不測量同樣的事情。 然而,已經有一些嘗試找出兩者之間的關係,而且有些令人吃驚。 例如,@Johnson2013 提出了一個相當有說服力的論點,即(至少對於 t 檢驗)p < .05 的閾值大致對應於大約 3:1 到 5:1 之間的貝氏因子支持替代假設。 如果這是正確的,那麼費雪的說法有些牽強。 假設虛無假設一半時間為真(即 $H_0$ 的先驗概率為 0.5),並使用這些數字計算在 p < .05 拒絕虛無假設時虛無假設的後驗概率。 使用 @Johnson2013 的數據,我們看到如果您在 p ă .05 時拒絕虛無假設,那麼大約 80% 的時候您是正確的。 我不知道您怎麼看,但在我看來,一個確保您在 20% 的決策中會錯誤的證據標准還不夠好。 事實仍然是,與費雪的說法完全相反,如果您在 p < .05 時拒絕虛無假設,您確實會經常犯錯。 這根本不是一個非常嚴格的證據閾值。  
+這是真的嗎?解決這個問題的一種方法是嘗試將 p 值轉換為貝氏因子,並查看兩者的比較情況。 這並不容易,因為 p 值與貝氏因子是一種基本不同的計算,它們不測量同樣的事情。 然而,已經有一些嘗試找出兩者之間的關係,而且有些令人吃驚。 例如,@Johnson2013 提出了一個相當有說服力的論點,即(至少對於 t 檢驗)p < .05 的閾值大致對應於大約 3:1 到 5:1 之間的貝氏因子支持替代假設。 如果這是正確的,那麼費雪的說法有些牽強。 假設虛無假設一半時間為真(即 $H_0$ 的先驗機率為 0.5),並使用這些數字計算在 p < .05 拒絕虛無假設時虛無假設的後驗機率。 使用 @Johnson2013 的數據,我們看到如果您在 p ă .05 時拒絕虛無假設,那麼大約 80% 的時候您是正確的。 我不知道您怎麼看,但在我看來,一個確保您在 20% 的決策中會錯誤的證據標准還不夠好。 事實仍然是,與費雪的說法完全相反,如果您在 p < .05 時拒絕虛無假設,您確實會經常犯錯。 這根本不是一個非常嚴格的證據閾值。  
 
 
 ### p值只是幻象
@@ -586,7 +585,7 @@ How badly can things go wrong if you re-run your tests every time new data arriv
 [^bayesian-statistics-13]: 一張漫畫解釋這裡談的問題: <a href="http://xkcd.com/1478/"
     target="_blank">http://xkcd.com/1478/</a> .
 
-更糟糕的是,它們以一種危險的方式撒謊,因為它們都_太小_了。為了讓您感受一下這有多嚴重,請考慮以下(最壞)情況。假設您是一位預算十分緊張的超級熱心的研究員,完全沒有注意我上面的警告。您設計了一項比較兩組的研究。您迫切希望在 $p < .05$ 水平上看到顯著結果,但您真的不想收集比需要的更多數據(因為這很昂貴)。為了節省成本,您開始收集數據,但每次有新的觀察值到來時,您都會對數據運行 t 檢驗。如果 t 檢驗說 $p < .05$,那麼您停止實驗並報告顯著結果。如果不是,您會繼續收集數據。您會一直這樣做,直到達到實驗的預定花費限額。假設該限制在 $N = 1000$ 的觀察上觸發。事實證明,真相是沒有真正的效應:虛無假設為真。所以,您達到實驗結束並(正確地)得出沒有影響的結論的機率是多少?在理想的世界中,答案在此應該是 95%。畢竟,$p < .05$ 標准的全部要點是將型I錯誤率控制在 5% 左右,所以我們希望的就是在這種情況下錯誤拒絕虛無假設的概率只有 5%。然而,沒有保證這將是真的。您是在破壞規則。因為您反复運行測試,“偷看”數據以查看是否獲得了顯著結果,所以所有賭注都打消了。
+更糟糕的是,它們以一種危險的方式撒謊,因為它們都_太小_了。為了讓您感受一下這有多嚴重,請考慮以下(最壞)情況。假設您是一位預算十分緊張的超級熱心的研究員,完全沒有注意我上面的警告。您設計了一項比較兩組的研究。您迫切希望在 $p < .05$ 水平上看到顯著結果,但您真的不想收集比需要的更多數據(因為這很昂貴)。為了節省成本,您開始收集數據,但每次有新的觀察值到來時,您都會對數據運行 t 檢驗。如果 t 檢驗說 $p < .05$,那麼您停止實驗並報告顯著結果。如果不是,您會繼續收集數據。您會一直這樣做,直到達到實驗的預定花費限額。假設該限制在 $N = 1000$ 的觀察上觸發。事實證明,真相是沒有真正的效應:虛無假設為真。所以,您達到實驗結束並(正確地)得出沒有影響的結論的機率是多少?在理想的世界中,答案在此應該是 95%。畢竟,$p < .05$ 標准的全部要點是將型I錯誤率控制在 5% 左右,所以我們希望的就是在這種情況下錯誤拒絕虛無假設的機率只有 5%。然而,沒有保證這將是真的。您是在破壞規則。因為您反复運行測試,“偷看”數據以查看是否獲得了顯著結果,所以所有賭注都打消了。
 
 那麼情況究竟有多糟糕呢?答案如 @fig-fig16-1 中實線所示,這是驚人的糟糕。如果您在每個單獨的觀察后查看數據,您將有 49% 的可能性會產生型I錯誤。也就是說,嗯,這比應該的 5% 大得多。相比之下,設想您使用了以下策略。開始收集數據。每次觀察到達時,運行 [貝氏t檢定] 並查看貝氏因子。我假設 @Johnson2013 是正確的,並且我會將 3:1 的貝氏因子大致視為等同於 p 值為 .05。[^bayesian-statistics-14] 這次,我們的扣發狂研究人員使用以下過程。如果貝氏因子大於或等於 3:1 支持虛無假設,則停止實驗並保留虛無假設。如果它大於或等於 3:1 支持替代假設,則停止實驗並拒絕虛無假設。否則繼續測試。現在,就像上次一樣,假設虛無假設為真。會發生什麼?實際上,我也為此情況運行了模擬,結果如圖 @fig-fig16-1 中的虛線所示。結果報表明,I 型錯誤率遠遠低於使用正統 t 檢驗獲得的 49%。  
 
